Fixed - added gap between buttons

--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,9 @@ a{
     padding: 0px 23px;
 }
 
-.download-mac{
+/* .download-mac{
     padding-right: 20px;
-}
+} */
 
 .mac__link{
     color: black;
@@ -141,6 +141,10 @@ a{
 }
 
 .call-to-action{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
     padding-top: 20px;
 }
 
